# Downloadit-now

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build.ps1  release.ps1
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DataTable.vue  DownloadHistory.vue  MainDownloader.vue
