[package]
name = "downloadit"
version = "0.1.0"
description = "Ultra-lightweight YouTube downloader using yt-dlp"
authors = ["you"]
edition = "2021"
rust-version = "1.60"

[lib]
name = "downloadit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "time",
] }
dirs = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

